syntax = "proto3";

package products;

// ===== COMMON =====

message Empty {}

message PaginationRequest {
  int32 page = 1;
  int32 limit = 2;
  string sort_by = 3;
  string sort_order = 4;
}

message PaginationResponse {
  int32 total = 1;
  int32 page = 2;
  int32 limit = 3;
  int32 total_pages = 4;
}

// ===== GAMME (Product Range/Category) =====

enum TypeGamme {
  TYPE_GAMME_UNSPECIFIED = 0;
  RISQUE = 1;
  FAMILLE = 2;
  SOUS_FAMILLE = 3;
}

message Gamme {
  string id = 1;
  string organisation_id = 2;
  string nom = 3;
  string description = 4;
  string icone = 5;
  string code = 6;
  int32 ordre = 7;
  bool actif = 8;
  optional string parent_id = 9;
  int32 niveau = 10;
  TypeGamme type_gamme = 11;
  string created_at = 12;
  string updated_at = 13;
}

message CreateGammeRequest {
  string organisation_id = 1;
  string nom = 2;
  string description = 3;
  string icone = 4;
  string code = 5;
  int32 ordre = 6;
}

message UpdateGammeRequest {
  string id = 1;
  optional string nom = 2;
  optional string description = 3;
  optional string icone = 4;
  optional string code = 5;
  optional int32 ordre = 6;
  optional bool actif = 7;
}

message GetGammeRequest {
  string id = 1;
}

message ListGammesRequest {
  string organisation_id = 1;
  optional bool actif = 2;
  PaginationRequest pagination = 3;
}

message ListGammesResponse {
  repeated Gamme gammes = 1;
  PaginationResponse pagination = 2;
}

message DeleteGammeRequest {
  string id = 1;
}

message DeleteGammeResponse {
  bool success = 1;
}

message GammeNode {
  string id = 1;
  string nom = 2;
  string code = 3;
  int32 niveau = 4;
  TypeGamme type_gamme = 5;
  repeated GammeNode children = 6;
}

message GetGammeTreeRequest {
  string organisation_id = 1;
  optional string parent_id = 2;
}

message GetGammeTreeResponse {
  repeated GammeNode roots = 1;
}

// ===== PRODUIT =====

enum TypeProduit {
  TYPE_PRODUIT_UNSPECIFIED = 0;
  INTERNE = 1;
  PARTENAIRE = 2;
}

enum StatutCycleProduit {
  STATUT_CYCLE_PRODUIT_UNSPECIFIED = 0;
  STATUT_CYCLE_PRODUIT_BROUILLON = 1;
  STATUT_CYCLE_PRODUIT_TEST = 2;
  STATUT_CYCLE_PRODUIT_ACTIF = 3;
  STATUT_CYCLE_PRODUIT_GELE = 4;
  STATUT_CYCLE_PRODUIT_RETIRE = 5;
}

enum CategorieProduit {
  CATEGORIE_PRODUIT_UNSPECIFIED = 0;
  ASSURANCE = 1;
  PREVOYANCE = 2;
  EPARGNE = 3;
  SERVICE = 4;
  ACCESSOIRE = 5;
}

enum TypeTarification {
   TYPE_TARIFICATION_UNSPECIFIED = 0;
   TYPE_TARIFICATION_FIXE = 1;
   TYPE_TARIFICATION_PALIER = 2;
   TYPE_TARIFICATION_RECURRENT = 3;
   TYPE_TARIFICATION_USAGE = 4;
   TYPE_TARIFICATION_BUNDLE = 5;
   TYPE_TARIFICATION_NEGOCIE = 6;
   TYPE_TARIFICATION_INDEXE = 7;
}

enum CanalVente {
   CANAL_VENTE_UNSPECIFIED = 0;
   CANAL_VENTE_TERRAIN = 1;
   CANAL_VENTE_TELEPHONE = 2;
   CANAL_VENTE_WEB = 3;
   CANAL_VENTE_MARQUE_BLANCHE = 4;
   CANAL_VENTE_MARKETPLACE = 5;
}

message Produit {
  string id = 1;
  string organisation_id = 2;
  string gamme_id = 3;
  string sku = 4;
  string nom = 5;
  string description = 6;
  CategorieProduit categorie = 7;
  TypeProduit type = 8;
  double prix = 9;
  double taux_tva = 10;
  string devise = 11;
  bool actif = 12;
  bool promotion_active = 13;
  double prix_promotion = 14;
  string date_debut_promotion = 15;
  string date_fin_promotion = 16;
  string image_url = 17;
  string code_externe = 18;
  string metadata = 19;
  string created_at = 20;
  string updated_at = 21;
  // Relations
  Gamme gamme = 22;
  StatutCycleProduit statut_cycle = 23;
  // Contractual terms
  optional int32 duree_engagement_mois = 24;
  string frequence_renouvellement = 25;
  string conditions_resiliation = 26;
  string unite_vente = 27;
  // Accounting mapping
  string code_comptable = 28;
  string compte_produit = 29;
  string journal_vente = 30;
  // Partner & distribution
  string partenaire_commercial_id = 31;
  string modele_distribution_id = 32;
  // Tarification model
  TypeTarification type_tarification = 33;
  string config_tarification = 34;
}

message CreateProduitRequest {
  string organisation_id = 1;
  string gamme_id = 2;
  string sku = 3;
  string nom = 4;
  string description = 5;
  CategorieProduit categorie = 6;
  TypeProduit type = 7;
  double prix = 8;
  double taux_tva = 9;
  string devise = 10;
  string image_url = 11;
  string code_externe = 12;
  string metadata = 13;
  StatutCycleProduit statut_cycle = 14;
}

message UpdateProduitRequest {
  string id = 1;
  optional string gamme_id = 2;
  optional string sku = 3;
  optional string nom = 4;
  optional string description = 5;
  optional CategorieProduit categorie = 6;
  optional TypeProduit type = 7;
  optional double prix = 8;
  optional double taux_tva = 9;
  optional string devise = 10;
  optional bool actif = 11;
  optional string image_url = 12;
  optional string code_externe = 13;
  optional string metadata = 14;
  optional StatutCycleProduit statut_cycle = 15;
}

message GetProduitRequest {
  string id = 1;
}

message GetProduitBySkuRequest {
  string organisation_id = 1;
  string sku = 2;
}

message ListProduitsRequest {
  string organisation_id = 1;
  optional string gamme_id = 2;
  optional CategorieProduit categorie = 3;
  optional TypeProduit type = 4;
  optional bool actif = 5;
  optional bool promotion_active = 6;
  optional string search = 7;
  PaginationRequest pagination = 8;
}

message ListProduitsResponse {
  repeated Produit produits = 1;
  PaginationResponse pagination = 2;
}

message DeleteProduitRequest {
  string id = 1;
}

message DeleteProduitResponse {
  bool success = 1;
}

// ===== PRODUIT VERSION =====

message ProduitVersion {
  string id = 1;
  string produit_id = 2;
  int32 version = 3;
  string effective_from = 4;
  string effective_to = 5;
  string notes = 6;
  bool breaking_changes = 7;
  string created_at = 8;
  string updated_at = 9;
}

message CreateProduitVersionRequest {
  string produit_id = 1;
  int32 version = 2;
  string effective_from = 3;
  optional string effective_to = 4;
  optional string notes = 5;
  optional bool breaking_changes = 6;
}

message UpdateProduitVersionRequest {
  string id = 1;
  optional string effective_from = 2;
  optional string effective_to = 3;
  optional string notes = 4;
  optional bool breaking_changes = 5;
}

message GetProduitVersionRequest {
  string id = 1;
}

message ListProduitVersionsRequest {
  string produit_id = 1;
  PaginationRequest pagination = 2;
}

message ListProduitVersionsResponse {
  repeated ProduitVersion versions = 1;
  PaginationResponse pagination = 2;
}

// ===== PRODUIT DOCUMENT =====

enum TypeDocumentProduit {
  TYPE_DOCUMENT_PRODUIT_UNSPECIFIED = 0;
  TYPE_DOCUMENT_PRODUIT_DIPA = 1;
  TYPE_DOCUMENT_PRODUIT_CG = 2;
  TYPE_DOCUMENT_PRODUIT_CP = 3;
  TYPE_DOCUMENT_PRODUIT_TARIF = 4;
  TYPE_DOCUMENT_PRODUIT_SCRIPT = 5;
  TYPE_DOCUMENT_PRODUIT_MEDIA = 6;
}

message ProduitDocument {
  string id = 1;
  string version_produit_id = 2;
  TypeDocumentProduit type = 3;
  string title = 4;
  string file_url = 5;
  string file_hash = 6;
  bool mandatory = 7;
  string published_at = 8;
  string created_at = 9;
  string updated_at = 10;
}

message CreateProduitDocumentRequest {
  string version_produit_id = 1;
  TypeDocumentProduit type = 2;
  string title = 3;
  string file_url = 4;
  string file_hash = 5;
  optional bool mandatory = 6;
}

message UpdateProduitDocumentRequest {
  string id = 1;
  optional string title = 2;
  optional string file_url = 3;
  optional string file_hash = 4;
  optional bool mandatory = 5;
  optional string published_at = 6;
}

message GetProduitDocumentRequest {
  string id = 1;
}

message ListProduitDocumentsRequest {
  string version_produit_id = 1;
}

message ListProduitDocumentsResponse {
  repeated ProduitDocument documents = 1;
}

// ===== PRODUIT PUBLICATION =====

enum VisibilitePublication {
  VISIBILITE_PUBLICATION_UNSPECIFIED = 0;
  VISIBILITE_PUBLICATION_CACHE = 1;
  VISIBILITE_PUBLICATION_INTERNE = 2;
  VISIBILITE_PUBLICATION_PUBLIC = 3;
}

message ProduitPublication {
  string id = 1;
  string version_produit_id = 2;
  string societe_id = 3;
  repeated string channels = 4;
  VisibilitePublication visibilite = 5;
  string start_at = 6;
  string end_at = 7;
  string created_at = 8;
  string updated_at = 9;
}

message CreateProduitPublicationRequest {
  string version_produit_id = 1;
  string societe_id = 2;
  repeated string channels = 3;
  VisibilitePublication visibilite = 4;
  string start_at = 5;
  optional string end_at = 6;
}

message UpdateProduitPublicationRequest {
  string id = 1;
  repeated string channels = 2;
  optional VisibilitePublication visibilite = 3;
  optional string start_at = 4;
  optional string end_at = 5;
}

message GetProduitPublicationRequest {
  string id = 1;
}

message ListProduitPublicationsByVersionRequest {
  string version_produit_id = 1;
}

message ListProduitPublicationsBySocieteRequest {
  string societe_id = 1;
}

message ListProduitPublicationsResponse {
  repeated ProduitPublication publications = 1;
}

// Promotion
message SetPromotionRequest {
  string produit_id = 1;
  double prix_promotion = 2;
  string date_debut = 3;
  string date_fin = 4;
}

message ClearPromotionRequest {
  string produit_id = 1;
}

// ===== GRILLE TARIFAIRE (Pricing Grid) =====

message GrilleTarifaire {
  string id = 1;
  string organisation_id = 2;
  string nom = 3;
  string description = 4;
  string date_debut = 5;
  string date_fin = 6;
  bool est_par_defaut = 7;
  bool actif = 8;
  string created_at = 9;
  string updated_at = 10;
  // Relations
  repeated PrixProduit prix_produits = 11;
}

message CreateGrilleTarifaireRequest {
  string organisation_id = 1;
  string nom = 2;
  string description = 3;
  string date_debut = 4;
  string date_fin = 5;
  bool est_par_defaut = 6;
}

message UpdateGrilleTarifaireRequest {
  string id = 1;
  optional string nom = 2;
  optional string description = 3;
  optional string date_debut = 4;
  optional string date_fin = 5;
  optional bool est_par_defaut = 6;
  optional bool actif = 7;
}

message GetGrilleTarifaireRequest {
  string id = 1;
}

message GetGrilleTarifaireActiveRequest {
  string organisation_id = 1;
  string date = 2;
}

message ListGrillesTarifairesRequest {
  string organisation_id = 1;
  optional bool actif = 2;
  optional bool est_par_defaut = 3;
  PaginationRequest pagination = 4;
}

message ListGrillesTarifairesResponse {
  repeated GrilleTarifaire grilles = 1;
  PaginationResponse pagination = 2;
}

message DeleteGrilleTarifaireRequest {
  string id = 1;
}

message DeleteGrilleTarifaireResponse {
  bool success = 1;
}

message SetGrilleParDefautRequest {
  string id = 1;
}

// ===== PRIX PRODUIT (Product Price in Grid) =====

message PrixProduit {
  string id = 1;
  string grille_tarifaire_id = 2;
  string produit_id = 3;
  double prix_unitaire = 4;
  double remise_pourcent = 5;
  double prix_minimum = 6;
  double prix_maximum = 7;
  bool actif = 8;
  string created_at = 9;
  string updated_at = 10;
  // Relations
  Produit produit = 11;
  GrilleTarifaire grille_tarifaire = 12;
}

message CreatePrixProduitRequest {
  string grille_tarifaire_id = 1;
  string produit_id = 2;
  double prix_unitaire = 3;
  double remise_pourcent = 4;
  double prix_minimum = 5;
  double prix_maximum = 6;
}

message UpdatePrixProduitRequest {
  string id = 1;
  optional double prix_unitaire = 2;
  optional double remise_pourcent = 3;
  optional double prix_minimum = 4;
  optional double prix_maximum = 5;
  optional bool actif = 6;
}

message GetPrixProduitRequest {
  string id = 1;
}

message GetPrixForProduitRequest {
  string grille_tarifaire_id = 1;
  string produit_id = 2;
}

message ListPrixProduitsRequest {
  string grille_tarifaire_id = 1;
  optional string produit_id = 2;
  optional bool actif = 3;
  PaginationRequest pagination = 4;
}

message ListPrixProduitsResponse {
  repeated PrixProduit prix_produits = 1;
  PaginationResponse pagination = 2;
}

message DeletePrixProduitRequest {
  string id = 1;
}

message DeletePrixProduitResponse {
  bool success = 1;
}

// Bulk operations
message BulkCreatePrixProduitsRequest {
  string grille_tarifaire_id = 1;
  repeated CreatePrixProduitItem items = 2;
}

message CreatePrixProduitItem {
  string produit_id = 1;
  double prix_unitaire = 2;
  double remise_pourcent = 3;
  double prix_minimum = 4;
  double prix_maximum = 5;
}

message BulkCreatePrixProduitsResponse {
  repeated PrixProduit created = 1;
  int32 count = 2;
}

// ===== CATALOG SERVICE (Unified operations) =====

message GetCatalogRequest {
  string organisation_id = 1;
  optional string grille_tarifaire_id = 2;
  optional string gamme_id = 3;
  optional bool include_inactive = 4;
}

message CatalogItem {
  Produit produit = 1;
  PrixProduit prix = 2;
  double prix_final = 3;
  bool en_promotion = 4;
}

message GetCatalogResponse {
  repeated CatalogItem items = 1;
  GrilleTarifaire grille_utilisee = 2;
}

message CalculatePriceRequest {
  string produit_id = 1;
  string grille_tarifaire_id = 2;
  int32 quantite = 3;
  double remise_additionnelle = 4;
}

message CalculatePriceResponse {
  double prix_unitaire = 1;
  double prix_apres_remise = 2;
  double prix_total_ht = 3;
  double tva = 4;
  double prix_total_ttc = 5;
  bool promotion_appliquee = 6;
}

// ===== SERVICES =====

service GammeService {
  rpc Create(CreateGammeRequest) returns (Gamme);
  rpc Update(UpdateGammeRequest) returns (Gamme);
  rpc Get(GetGammeRequest) returns (Gamme);
  rpc List(ListGammesRequest) returns (ListGammesResponse);
  rpc Delete(DeleteGammeRequest) returns (DeleteGammeResponse);
  rpc GetTree(GetGammeTreeRequest) returns (GetGammeTreeResponse);
}

service ProduitService {
  rpc Create(CreateProduitRequest) returns (Produit);
  rpc Update(UpdateProduitRequest) returns (Produit);
  rpc Get(GetProduitRequest) returns (Produit);
  rpc GetBySku(GetProduitBySkuRequest) returns (Produit);
  rpc List(ListProduitsRequest) returns (ListProduitsResponse);
  rpc Delete(DeleteProduitRequest) returns (DeleteProduitResponse);
  rpc SetPromotion(SetPromotionRequest) returns (Produit);
  rpc ClearPromotion(ClearPromotionRequest) returns (Produit);
}

service ProduitVersionService {
  rpc Create(CreateProduitVersionRequest) returns (ProduitVersion);
  rpc Update(UpdateProduitVersionRequest) returns (ProduitVersion);
  rpc Get(GetProduitVersionRequest) returns (ProduitVersion);
  rpc ListByProduit(ListProduitVersionsRequest) returns (ListProduitVersionsResponse);
}

service ProduitDocumentService {
  rpc Create(CreateProduitDocumentRequest) returns (ProduitDocument);
  rpc Update(UpdateProduitDocumentRequest) returns (ProduitDocument);
  rpc Get(GetProduitDocumentRequest) returns (ProduitDocument);
  rpc ListByVersion(ListProduitDocumentsRequest) returns (ListProduitDocumentsResponse);
}

service ProduitPublicationService {
  rpc Create(CreateProduitPublicationRequest) returns (ProduitPublication);
  rpc Update(UpdateProduitPublicationRequest) returns (ProduitPublication);
  rpc Get(GetProduitPublicationRequest) returns (ProduitPublication);
  rpc ListByVersion(ListProduitPublicationsByVersionRequest) returns (ListProduitPublicationsResponse);
  rpc ListBySociete(ListProduitPublicationsBySocieteRequest) returns (ListProduitPublicationsResponse);
}

service GrilleTarifaireService {
  rpc Create(CreateGrilleTarifaireRequest) returns (GrilleTarifaire);
  rpc Update(UpdateGrilleTarifaireRequest) returns (GrilleTarifaire);
  rpc Get(GetGrilleTarifaireRequest) returns (GrilleTarifaire);
  rpc GetActive(GetGrilleTarifaireActiveRequest) returns (GrilleTarifaire);
  rpc List(ListGrillesTarifairesRequest) returns (ListGrillesTarifairesResponse);
  rpc Delete(DeleteGrilleTarifaireRequest) returns (DeleteGrilleTarifaireResponse);
  rpc SetParDefaut(SetGrilleParDefautRequest) returns (GrilleTarifaire);
}

service PrixProduitService {
  rpc Create(CreatePrixProduitRequest) returns (PrixProduit);
  rpc Update(UpdatePrixProduitRequest) returns (PrixProduit);
  rpc Get(GetPrixProduitRequest) returns (PrixProduit);
  rpc GetForProduit(GetPrixForProduitRequest) returns (PrixProduit);
  rpc List(ListPrixProduitsRequest) returns (ListPrixProduitsResponse);
  rpc Delete(DeletePrixProduitRequest) returns (DeletePrixProduitResponse);
  rpc BulkCreate(BulkCreatePrixProduitsRequest) returns (BulkCreatePrixProduitsResponse);
}

service CatalogService {
   rpc GetCatalog(GetCatalogRequest) returns (GetCatalogResponse);
   rpc CalculatePrice(CalculatePriceRequest) returns (CalculatePriceResponse);
}

// ===== FORMULE PRODUIT (Product Formula/Variant) =====

message GarantieFormule {
   string nom = 1;
   string description = 2;
   double plafond = 3;
   double franchise = 4;
   bool actif = 5;
}

message OptionFormule {
   string nom = 1;
   double prix_supplement = 2;
   string description = 3;
   bool obligatoire = 4;
}

enum FranchiseType {
   FRANCHISE_TYPE_UNSPECIFIED = 0;
   FRANCHISE_TYPE_MONTANT = 1;
   FRANCHISE_TYPE_POURCENTAGE = 2;
}

enum TypeAjustementPrix {
   TYPE_AJUSTEMENT_PRIX_UNSPECIFIED = 0;
   TYPE_AJUSTEMENT_PRIX_MONTANT = 1;
   TYPE_AJUSTEMENT_PRIX_POURCENTAGE = 2;
}

message FormuleProduit {
   string id = 1;
   string produit_id = 2;
   string code = 3;
   string nom = 4;
   string description = 5;
   int32 ordre = 6;
   repeated GarantieFormule garanties = 7;
   repeated OptionFormule options = 8;
   double franchise_montant = 9;
   FranchiseType franchise_type = 10;
   double prix_formule = 11;
   TypeAjustementPrix type_ajustement_prix = 12;
   bool actif = 13;
   string version_produit_id = 14;
   string metadata = 15;
   string created_by = 16;
   string modified_by = 17;
   string created_at = 18;
   string updated_at = 19;
}

message CreateFormuleProduitRequest {
   string produit_id = 1;
   string code = 2;
   string nom = 3;
   string description = 4;
   int32 ordre = 5;
   repeated GarantieFormule garanties = 6;
   repeated OptionFormule options = 7;
   double franchise_montant = 8;
   FranchiseType franchise_type = 9;
   double prix_formule = 10;
   TypeAjustementPrix type_ajustement_prix = 11;
   optional string version_produit_id = 12;
   optional string metadata = 13;
}

message UpdateFormuleProduitRequest {
   string id = 1;
   optional string code = 2;
   optional string nom = 3;
   optional string description = 4;
   optional int32 ordre = 5;
   repeated GarantieFormule garanties = 6;
   repeated OptionFormule options = 7;
   optional double franchise_montant = 8;
   optional FranchiseType franchise_type = 9;
   optional double prix_formule = 10;
   optional TypeAjustementPrix type_ajustement_prix = 11;
   optional bool actif = 12;
   optional string metadata = 13;
}

message GetFormuleProduitRequest {
   string id = 1;
}

message ListFormulesProduitRequest {
   string produit_id = 1;
   optional bool actif = 2;
   PaginationRequest pagination = 3;
}

message ListFormulesProduitResponse {
   repeated FormuleProduit formules = 1;
   PaginationResponse pagination = 2;
}

message DeleteFormuleProduitRequest {
   string id = 1;
}

message DeleteFormuleProduitResponse {
   bool success = 1;
}

message ActiverFormuleProduitRequest {
   string id = 1;
}

message DesactiverFormuleProduitRequest {
   string id = 1;
}

service FormuleProduitService {
   rpc Create(CreateFormuleProduitRequest) returns (FormuleProduit);
   rpc Update(UpdateFormuleProduitRequest) returns (FormuleProduit);
   rpc Get(GetFormuleProduitRequest) returns (FormuleProduit);
   rpc ListByProduit(ListFormulesProduitRequest) returns (ListFormulesProduitResponse);
   rpc Delete(DeleteFormuleProduitRequest) returns (DeleteFormuleProduitResponse);
   rpc Activer(ActiverFormuleProduitRequest) returns (FormuleProduit);
   rpc Desactiver(DesactiverFormuleProduitRequest) returns (FormuleProduit);
}
